# python-snapcastcontrol

./: .gitignore  notes2myself.txt
package/: README.md  pyproject.toml  reloader.py  requirements.txt  test-snapcontrol.py
package/snapcastcontrol/: __init__.py
package/snapcastcontrol/control/: SnapControl.py
