[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "snapcastcontrol"
author = "Poul Spang"
requires-python = ">=3.7"
description-file = "README.md"
home-page = "https://github.com/poulsp/python-snapcastcontrol"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
]
